优化切换主题的图标显示样式

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SFS安装器</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
@@ -20,7 +20,7 @@
         <mdui-dropdown>
             <div slot="trigger">
                 <mdui-tooltip content="主题">
-                    <mdui-button-icon icon="light_mode--outlined"></mdui-button-icon>
+                    <mdui-button-icon id="switch-theme-icon-button" icon="light_mode--outlined"></mdui-button-icon>
                 </mdui-tooltip>
             </div>
             <mdui-menu id="theme-menu" selects="single" value="auto">
