增加覆盖层模糊 移除子页面切换模块

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>SFS安装器</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Two+Tone" rel="stylesheet">
 </head>
 
 <body>
@@ -45,25 +42,11 @@
         <mdui-navigation-drawer id="top-appbar-menu" contained close-on-overlay-click close-on-esc>
             <div id="left-navigation-drawer-container">
                 <mdui-list>
-                    <!-- <mdui-list-item rounded active icon="home" data-id="home" href="/">主页</mdui-list-item> -->
-                    <!-- <mdui-list-item rounded icon="translate" data-id="translation" href="#/translation">汉化包</mdui-list-item> -->
                     <mdui-list-item rounded icon="android" data-id="installer-download"
                         href="#/installer-download">安装器</mdui-list-item>
-                    <!-- <mdui-list-item rounded icon="info" data-id="about">关于</mdui-list-item> -->
                 </mdui-list>
             </div>
         </mdui-navigation-drawer>
-        <!-- <div id="home-div" class="subpage" data-id="home">
-            <div id="home-page-card-div">
-                <mdui-card clickable class="home-page-link-card" variant="elevated" href="#/translation">
-                    <h3 class="description-title"><mdui-icon name='translate'></mdui-icon>航天模拟器汉化包</h3>
-                </mdui-card>
-                <mdui-card clickable class="home-page-link-card" variant="elevated" href="#/installer-download">
-                    <h3 class="description-title"><mdui-icon name='android'></mdui-icon>SFS安装器</h3>
-                </mdui-card>
-            </div>
-        </div>
-        <div id="translation-div" class="subpage" data-id="translation"></div> -->
         <div id="installer-download-div" class="subpage" data-id="installer-download">
             <div id="installer-app-info">
                 <div id="package-info-div">
@@ -82,7 +65,8 @@
                         </div>
                         <mdui-menu id="theme-menu" value="auto">
                             <mdui-menu-item value="light" href="https://qm.qq.com/q/xuhVzPymqu">QQ 群</mdui-menu-item>
-                            <mdui-menu-item value="dark" href="https://alist.na2cr2o7.icu/SpaceflightSimulator_CNlang/SFS%E5%AE%89%E8%A3%85%E5%99%A8">重铬酸钠の存储站</mdui-menu-item>
+                            <mdui-menu-item value="dark"
+                                href="https://alist.na2cr2o7.icu/SpaceflightSimulator_CNlang/SFS%E5%AE%89%E8%A3%85%E5%99%A8">重铬酸钠の存储站</mdui-menu-item>
                         </mdui-menu>
                     </mdui-dropdown>
                 </div>
