--- a/index.html
+++ b/index.html
@@ -42,11 +42,19 @@
         <mdui-navigation-drawer id="top-appbar-menu" contained close-on-overlay-click close-on-esc>
             <div id="left-navigation-drawer-container">
                 <mdui-list>
-                    <mdui-list-item rounded icon="android" data-id="installer-download"
-                        href="#/installer-download">安装器</mdui-list-item>
+                    <mdui-list-item active rounded icon="android" data-id="installer-download"
+                        href="/">安装器</mdui-list-item>
                 </mdui-list>
             </div>
         </mdui-navigation-drawer>
+        <mdui-dialog close-on-esc close-on-overlay-click headline="关于" id="about-dialog">
+            <div slot="description">
+                此页面及应用由 <a href="https://za-ko.cn/">重铬酸钠</a> 制作</br>
+                此页面使用 <a href="https://www.mdui.org/">MDUI</a> 构建</br>
+                感谢 <a href="https://youfeng11.github.io/">由风</a> 为此应用提供帮助</br>
+            </div>
+            <mdui-button slot="action" variant="text" id="about-dialog-confirm">确定</mdui-button>
+        </mdui-dialog>
         <div id="installer-download-div" class="subpage" data-id="installer-download">
             <div id="installer-app-info">
                 <div id="package-info-div">
@@ -60,7 +68,7 @@
                     <mdui-dropdown>
                         <div slot="trigger">
                             <mdui-tooltip content="下载">
-                                <mdui-button-icon icon="download--outlined"></mdui-button-icon>
+                                <mdui-button-icon icon="download"></mdui-button-icon>
                             </mdui-tooltip>
                         </div>
                         <mdui-menu id="theme-menu" value="auto">
