修复下载按钮不居中的问题

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </mdui-navigation-drawer>
         <mdui-dialog close-on-esc close-on-overlay-click headline="关于" id="about-dialog">
             <div slot="description">
-                此页面及应用由 <a href="https://za-ko.cn/">重铬酸钠</a> 制作</br>
+                此页面及应用由 <a href="https://izako.cc/">重铬酸钠</a> 制作</br>
                 此页面使用 <a href="https://www.mdui.org/">MDUI</a> 构建</br>
                 感谢 <a href="https://youfeng11.github.io/">由风</a> 为此应用提供帮助</br>
             </div>
@@ -71,7 +71,7 @@
                                 <mdui-button-icon icon="download"></mdui-button-icon>
                             </mdui-tooltip>
                         </div>
-                        <mdui-menu id="theme-menu" value="auto">
+                        <mdui-menu id="download-menu" value="auto">
                             <mdui-menu-item value="light" href="https://qm.qq.com/q/xuhVzPymqu">QQ 群</mdui-menu-item>
                             <mdui-menu-item value="dark"
                                 href="https://alist.na2cr2o7.icu/SpaceflightSimulator_CNlang/SFS%E5%AE%89%E8%A3%85%E5%99%A8">重铬酸钠の存储站</mdui-menu-item>
@@ -80,10 +80,10 @@
                 </div>
             </div>
             <div id="sereenshot-div">
-                <img src="./Screenshot1.jpg" alt="截图1" class="screenshot-img">
-                <img src="./Screenshot2.jpg" alt="截图2" class="screenshot-img">
-                <img src="./Screenshot3.jpg" alt="截图3" class="screenshot-img">
-                <img src="./Screenshot4.jpg" alt="截图3" class="screenshot-img">
+                <img src="./Screenshot1.jpg" alt="Screenshot" class="screenshot-img">
+                <img src="./Screenshot2.jpg" alt="Screenshot" class="screenshot-img">
+                <img src="./Screenshot3.jpg" alt="Screenshot" class="screenshot-img">
+                <img src="./Screenshot4.jpg" alt="Screenshot" class="screenshot-img">
             </div>
             <mdui-card class="description-card" variant="outlined">
                 <h3 class="description-title"><mdui-icon name='description'></mdui-icon>介绍</h3>
