--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 </div>
             </div>
             <div id="sereenshot-div">
-                <img src="./Screenshot1.jpg" alt="Screenshot" class="screenshot-img">
-                <img src="./Screenshot2.jpg" alt="Screenshot" class="screenshot-img">
-                <img src="./Screenshot3.jpg" alt="Screenshot" class="screenshot-img">
-                <img src="./Screenshot4.jpg" alt="Screenshot" class="screenshot-img">
+                <a data-fancybox href="./Screenshot1.jpg"><img src="./Screenshot1.jpg" alt="Screenshot" class="screenshot-img"></a>
+                <a data-fancybox href="./Screenshot2.jpg"><img src="./Screenshot2.jpg" alt="Screenshot" class="screenshot-img"></a>
+                <a data-fancybox href="./Screenshot3.jpg"><img src="./Screenshot3.jpg" alt="Screenshot" class="screenshot-img"></a>
+                <a data-fancybox href="./Screenshot4.jpg"><img src="./Screenshot4.jpg" alt="Screenshot" class="screenshot-img"></a>
             </div>
             <mdui-card class="description-card" variant="outlined">
                 <h3 class="description-title"><mdui-icon name='description'></mdui-icon>介绍</h3>
