将下载菜单和截图改为通过 config 创建

--- a/index.html
+++ b/index.html
@@ -71,19 +71,12 @@
                                 <mdui-button-icon icon="download"></mdui-button-icon>
                             </mdui-tooltip>
                         </div>
-                        <mdui-menu id="download-menu" value="auto">
-                            <mdui-menu-item value="light" href="https://qm.qq.com/q/xuhVzPymqu">QQ 群</mdui-menu-item>
-                            <mdui-menu-item value="dark"
-                                href="https://alist.na2cr2o7.icu/SpaceflightSimulator_CNlang/SFS%E5%AE%89%E8%A3%85%E5%99%A8">重铬酸钠の存储站</mdui-menu-item>
-                        </mdui-menu>
+                        <mdui-menu id="download-menu" value="auto"></mdui-menu>
                     </mdui-dropdown>
                 </div>
             </div>
             <div id="sereenshot-div">
-                <a data-fancybox href="./Screenshot1.jpg"><img src="./Screenshot1.jpg" alt="Screenshot" class="screenshot-img"></a>
-                <a data-fancybox href="./Screenshot2.jpg"><img src="./Screenshot2.jpg" alt="Screenshot" class="screenshot-img"></a>
-                <a data-fancybox href="./Screenshot3.jpg"><img src="./Screenshot3.jpg" alt="Screenshot" class="screenshot-img"></a>
-                <a data-fancybox href="./Screenshot4.jpg"><img src="./Screenshot4.jpg" alt="Screenshot" class="screenshot-img"></a>
+
             </div>
             <mdui-card class="description-card" variant="outlined">
                 <h3 class="description-title"><mdui-icon name='description'></mdui-icon>介绍</h3>
