修改更新日志

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </mdui-navigation-drawer>
         <mdui-dialog close-on-esc close-on-overlay-click headline="关于" id="about-dialog">
-            <div slot="description">
+            <div slot="description" style="padding: 5px 0;">
                 此页面及应用由<a href="https://izako.cc/">重铬酸钠</a>制作</br>
                 此页面使用<a href="https://www.mdui.org/">MDUI</a>构建</br>
                 感谢<a href="https://youfeng11.github.io/">由风</a>为此应用提供帮助</br>
@@ -86,8 +86,7 @@
             <mdui-card class="description-card" variant="outlined">
                 <h3 class="description-title"><mdui-icon name='update'></mdui-icon>更新日志</h3>
                 <ul>
-                    <li>适配 arm32 设备</li>
-                    <li>增加开屏警告提示</li>
+                    <li>自动应用汉化包</li>
                 </ul>
             </mdui-card>
         </div>
